# cpp-cli-chat-app

./: CMakeLists.txt  README.md  cli-chat-app.drawio
include/: chat.h  chat_app.h  cli_gui.h
src/: chat.cpp  chat_app.cpp  main.cpp  notes.md
